final working version

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Student: {{last_name}}, {{first_name}}<h1>
 <h2>Github: {{github}}<h2>
-<p>This student has shown extreme recalcitrace and has generally proved to be unreliable </p>
+<p>{{project_title}} {{grades}}</p>
 <p>It is my recommendation that they be put on double secret probation for the remainder of the course</p>
 </body>
 </html>
